--- a/index.css
+++ b/index.css
@@ -8,9 +8,11 @@
 
 .left-part{
     width: 30%; 
+    background-image: url(https://st2.depositphotos.com/1006006/6432/i/450/depositphotos_64323455-stock-photo-focus-on-asking-how.jpg);
     float:left; 
-    background-color: #313335;
-     height: 448%; 
+    /* background-position-x: center; */
+    /* background-color: #313335; */
+     height: 450%; 
 
 }
 
