--- a/index.css
+++ b/index.css
@@ -1,19 +1,14 @@
 #try{
     font-family:  Calibri, 'Trebuchet MS', sans-serif; 
-    max-width: 50%;
+    max-width: 80%;
     margin: auto;
     display: flex;
-
 }
 
 .left-part{
-    width: 30%; 
     background-image: url(https://st2.depositphotos.com/1006006/6432/i/450/depositphotos_64323455-stock-photo-focus-on-asking-how.jpg);
-    float:left; 
-    /* background-position-x: center; */
-    /* background-color: #313335; */
-     height: 450%; 
-
+    
+    
 }
 
 div > h4{
@@ -37,8 +32,8 @@ color{
 
 .right > div{
     padding-left: 30;
-    /* display: flex; */
-    justify-content: flex-end;
+    display: flex;
+    flex-direction: column;
 }
 
 hr{
