--- a/index.css
+++ b/index.css
@@ -11,6 +11,8 @@
     background-image: url(https://st2.depositphotos.com/1006006/6432/i/450/depositphotos_64323455-stock-photo-focus-on-asking-how.jpg);
     position:sticky;
     top: 0;
+    display: flex;
+    flex-direction: column;
 
 }
 
@@ -19,7 +21,7 @@ div > h4{
 }
 
 .left-part > div{
-    padding-left: 20; 
+    padding: 10; 
     color:white; 
     font-size: small;
 }
